# fenix-builder

./: .gitignore  CMakeLists.txt  README.md  do.sh  projects.cmake
sources/: CMakeLists.txt
sources/base/: CMakeLists.txt
sources/base/api/carpc/base/: enable_shared_from_this_virtual.hpp
sources/base/api/carpc/base/common/: IPC.hpp  Priority.hpp  Version.hpp
sources/base/api/carpc/base/math/: TMatrix.hpp
sources/base/imp/carpc/base/asm/: cpu.cpp
sources/base/imp/carpc/base/common/: CircularBuffer.cpp  RawBuffer.cpp  Types.cpp
sources/carpc/: CMakeLists.txt
sources/carpc-examples/: CMakeLists.txt
sources/carpc-examples/application/: CMakeLists.txt
sources/carpc-examples/application/imp/app/events/: AppEvent.hpp
sources/carpc-examples/events/: CMakeLists.txt
sources/carpc-examples/events/imp/app/events/: Events.cpp  Events.hpp
sources/carpc-examples/mvc/: CMakeLists.txt
sources/carpc-examples/mvc/controller/: CMakeLists.txt  controller.adl
sources/carpc-examples/mvc/core/: CMakeLists.txt
sources/carpc-examples/mvc/hmi/: CMakeLists.txt
sources/carpc-examples/rolename/: CMakeLists.txt
sources/carpc-examples/rolename/hybrid/: CMakeLists.txt  hybrid.adl
sources/carpc-examples/rolename/symbiont/: CMakeLists.txt
sources/carpc-examples/service/: CMakeLists.txt
sources/carpc-examples/service/api/service/: hmi.idl
sources/carpc-examples/service/api/service/navigation/: base.ddl
sources/carpc-examples/stream/: CMakeLists.txt
sources/carpc-examples/stream/api/: CMakeLists.txt
sources/carpc-examples/stream/imp/stream/: main.cpp
sources/carpc-tutorial/ex_01/: ex_01.cfg
sources/carpc-tutorial/ex_03/: ex_03.adl
sources/carpc-tutorial/ex_04/: CMakeLists.txt
sources/carpc-tutorial/ex_04/imp/app/events/: AppEvent.hpp
sources/carpc/instrumental/: CMakeLists.txt
sources/carpc/instrumental/imp/instrumental/: Application.cpp
sources/carpc/osw/: CMakeLists.txt
sources/carpc/osw/api/carpc/oswrappers/: Socket.hpp  Types.hpp
sources/carpc/osw/imp/carpc/oswrappers/: ConditionVariable.cpp  Mutex.cpp
sources/carpc/runtime/: CMakeLists.txt
sources/carpc/runtime/api/carpc/runtime/application/: Component.hpp  Context.hpp  Thread.hpp  Types.hpp
sources/carpc/runtime/api/carpc/runtime/comm/async/: AsyncQueue.hpp  IAsync.hpp
sources/carpc/runtime/api/carpc/runtime/comm/async/callable/: TCallable.hpp
sources/carpc/runtime/api/carpc/runtime/comm/async/event/: Event.hpp  TData.hpp  TEvent.hpp  TGenerator.hpp  TSignature.hpp
sources/carpc/runtime/api/carpc/runtime/comm/async/runnable/: IRunnable.hpp  Runnable.hpp
sources/carpc/runtime/api/carpc/runtime/comm/service/: IConnection.hpp  IProxy.hpp  Passport.hpp  Signature.hpp
sources/carpc/runtime/api/carpc/runtime/comm/service/experimental/: TClient.hpp  TGenerator.hpp  TProxy.hpp  TServer.hpp  TSignature.hpp
sources/carpc/runtime/api/carpc/runtime/comm/service/fast/: TClient.hpp  TGenerator.hpp  TProxy.hpp  TServer.hpp
sources/carpc/runtime/api/carpc/runtime/comm/service/secure/: TClient.hpp  TGenerator.hpp  TProxy.hpp  TServer.hpp
sources/carpc/runtime/api/carpc/runtime/command/: Queue.hpp  Types.hpp
sources/carpc/runtime/api/carpc/runtime/fsm/: TState.hpp  TStateManager.hpp
sources/carpc/runtime/imp/carpc/runtime/application/: IThread.cpp  Process.cpp  ServiceEventConsumer.cpp  SystemEventConsumer.cpp  Thread.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/: Types.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/async/: AsyncConsumerMap.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/async/callable/: ICallable.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/async/event/: IEvent.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/async/runnable/: IRunnable.cpp  Runnable.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/service/: Address.cpp  IConnection.cpp  IProxy.cpp  IServer.cpp  Passport.cpp  Registry.cpp  Types.cpp
sources/carpc/runtime/imp/carpc/runtime/comm/timer/: TimerClass.cpp  TimerFunction.cpp
sources/carpc/runtime/imp/carpc/runtime/command/: ICommand.cpp  Queue.cpp  Types.cpp
sources/carpc/servicebrocker/: CMakeLists.txt
sources/carpc/servicebrocker/imp/srvbrck/: ConnectionProcessor.cpp  ConnectionProcessor.hpp
sources/carpc/tools/: CMakeLists.txt
sources/carpc/tracing/: CMakeLists.txt
sources/examples/application/: application.adl
sources/examples/events/: CMakeLists.txt  events.adl  events.cfg
sources/examples/mvc/controller/: CMakeLists.txt
sources/examples/mvc/core/: core.adl
sources/examples/mvc/hmi/: CMakeLists.txt  hmi.adl
sources/examples/rolename/symbiont/: symbiont.adl
sources/examples/service/: CMakeLists.txt
sources/examples/service/api/service/: onoff.idl
sources/hooks/: CMakeLists.txt
sources/hooks/imp/hooks/: MemoryMap.cpp  memory.cpp
sources/osw/: CMakeLists.txt
sources/osw/imp/carpc/oswrappers/: Futex.cpp  Spinlock.cpp
sources/project_A/: CMakeLists.txt  main.cpp
sources/project_B/: CMakeLists.txt
sources/project_C/: CMakeLists.txt
sources/runtime/: CMakeLists.txt
sources/runtime/api/carpc/runtime/application/: IComponent.hpp  IThread.hpp  Process.hpp  RootComponent.hpp  ThreadIPC.hpp  main.hpp
sources/runtime/api/carpc/runtime/comm/: Types.hpp
sources/runtime/api/carpc/runtime/command/: ICommand.hpp
sources/runtime/api/carpc/runtime/common/: Packet.hpp
sources/runtime/api/carpc/runtime/events/: Events.hpp
sources/runtime/api/carpc/runtime/fsm/: Types.hpp
sources/runtime/imp/carpc/runtime/application/: Component.cpp  Context.cpp  IComponent.cpp  RootComponent.cpp  SendReceive.cpp  SendReceive.hpp  ServiceEventConsumer.hpp  SystemEventConsumer.hpp  ThreadIPC.cpp  Types.cpp
sources/runtime/imp/carpc/runtime/common/: Packet.cpp
sources/tools/: CMakeLists.txt
sources/tools/imp/carpc/tools/: Tools.cpp
sources/tracing/: CMakeLists.txt
sources/tutorial/: CMakeLists.txt
sources/tutorial/ex_01/: CMakeLists.txt  ex_01.adl
sources/tutorial/ex_02/: CMakeLists.txt  ex_02.adl  ex_02.cfg
sources/tutorial/ex_03/: CMakeLists.txt
sources/tutorial/ex_04/: ex_04.adl  ex_04.cfg
(+110 files in other folders)
